--- a/Fast.Fody/Fast.Fody.fsproj
+++ b/Fast.Fody/Fast.Fody.fsproj
@@ -10,19 +10,20 @@
     <GenerateDocumentationFile Condition=" '$(Configuration)' == 'Release' ">True</GenerateDocumentationFile>
     <GeneratePackageOnBuild Condition=" '$(Configuration)' == 'Release' ">True</GeneratePackageOnBuild>
 
-    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <CopyLocalLockFileAssemblies>True</CopyLocalLockFileAssemblies>
+    <DisableFody>True</DisableFody>
 
     <!-- NuGet properties -->
-    <Description>Fody weaver that removes all references to FSharp.Core in an assembly.</Description>
+    <Description>Fody weaver that uses F# scripts to dynamically edit an assembly.</Description>
     <Copyright>Copyright 2018 (c) Grégoire Geis</Copyright>
     <Authors>Grégoire Geis</Authors>
 
-    <Title>Fast</Title>
+    <Title>Fast.Fody</Title>
     <PackageId>Fast.Fody</PackageId>
     <PackageVersion>$(Version)</PackageVersion>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes>- Initial release.</PackageReleaseNotes>
-    <PackageTags>fody weaver fsharp</PackageTags>
+    <PackageTags>fody weaver fsharp interactive fsi</PackageTags>
 
     <PackageProjectUrl>https://github.com/6A/Fast.Fody</PackageProjectUrl>
     <PackageLicenseUrl>$(PackageProjectUrl)/blob/master/LICENSE.md</PackageLicenseUrl>
@@ -41,6 +42,16 @@
     <Copy SourceFiles="$(TargetPath)" DestinationFiles="$(ProjectDir)..\Weavers\bin\Weavers.dll" />
   </Target>
 
+  <Target Name="CollectRuntimeOutputs" BeforeTargets="_GetPackageFiles">
+    <!-- Collect these items inside a target that runs after build but before packaging. -->
+    <ItemGroup>
+      <Content Include="$(OutputPath)*.dll;$(OutputPath)*.xml;$(OutputPath)Fast.Fody.pdb">
+        <Pack>true</Pack>
+        <PackagePath />
+      </Content>
+    </ItemGroup>
+  </Target>
+
   <ItemGroup>
     <Compile Include="ModuleWeaver.fs" />
     <Compile Include="Context.fs" />
@@ -56,7 +67,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FodyHelpers" Version="3.0.3" />
+    <PackageReference Include="Fody" Version="3.1.2" PrivateAssets="None" />
+    <PackageReference Include="FodyHelpers" Version="3.1.2" />
     <PackageReference Include="FSharp.Compiler.Service" Version="23.0.3" />
   </ItemGroup>
 
